Header Styling Finish

--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./normalize.css" />
+    <!-- 폰트-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>The Title of WebSite</title>
   </head>
   <body>
-    <header class="header">헤더</header>
+    <header class="header">
+      <div class="container">
+        <h1 class="logo">
+          <img
+            src="https://static.djangoproject.com/img/logo-django.42234b631760.svg"
+            alt="Django"
+          />
+        </h1>
+        <nav class="nav">
+          <ul class="list">
+            <li class="listitem"><a href="#">Overview</a></li>
+            <li class="listitem"><a href="#">Download</a></li>
+            <li class="listitem"><a href="#">Documentation</a></li>
+            <li class="listitem"><a href="#">News</a></li>
+            <li class="listitem"><a href="#">Community</a></li>
+            <li class="listitem"><a href="#">Code</a></li>
+            <li class="listitem"><a href="#">About</a></li>
+            <li class="listitem"><a href="#">Donate</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main class="main">
       <div class="hero-section">히어로</div>
       <div class="main-content">메인 콘텐츠</div>
