--- a/index.html
+++ b/index.html
@@ -1,115 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- 주석  -->
-  <head>
+<!-- 주석  -->
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./normalize.css" />
     <!-- 폰트-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" />
     <title>The Title of WebSite</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="header">
-      <div class="container">
-        <h1 class="logo">
-          <img
-            src="https://static.djangoproject.com/img/logo-django.42234b631760.svg"
-            alt="Django"
-          />
-        </h1>
-        <nav class="nav">
-          <ul class="list">
-            <li class="listitem"><a href="#">Overview</a></li>
-            <li class="listitem"><a href="#">Download</a></li>
-            <li class="listitem"><a href="#">Documentation</a></li>
-            <li class="listitem"><a href="#">News</a></li>
-            <li class="listitem"><a href="#">Community</a></li>
-            <li class="listitem"><a href="#">Code</a></li>
-            <li class="listitem"><a href="#">About</a></li>
-            <li class="listitem"><a href="#">Donate</a></li>
-          </ul>
-        </nav>
-      </div>
+        <div class="container">
+            <h1 class="logo">
+                <img src="https://static.djangoproject.com/img/logo-django.42234b631760.svg" alt="Django" />
+            </h1>
+            <nav class="nav">
+                <ul class="list">
+                    <li class="listitem"><a href="#">Overview</a></li>
+                    <li class="listitem"><a href="#">Download</a></li>
+                    <li class="listitem"><a href="#">Documentation</a></li>
+                    <li class="listitem"><a href="#">News</a></li>
+                    <li class="listitem"><a href="#">Community</a></li>
+                    <li class="listitem"><a href="#">Code</a></li>
+                    <li class="listitem"><a href="#">About</a></li>
+                    <li class="listitem"><a href="#">Donate</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="main">
-      <div class="hero-section">
-        <div class="container">
-          <p class="intro-desc">
-            Django makes it easier to build better Web apps more quickly and
-            with less code.
-          </p>
-          <a href="#" class="cta"> Get started with Django </a>
+        <div class="hero-section">
+            <div class="container">
+                <p class="intro-desc">
+                    Django makes it easier to build better Web apps more quickly and with less code.
+                </p>
+                <a href="#" class="cta"> Get started with Django </a>
+            </div>
         </div>
-      </div>
 
-      <div class="container-float">
-        <div class="main-content">
-          <h2 class="main-title">Stay in the loop</h2>
-          <p class="main-desc">
-            Subscribe to one of our mailling lists to stay up to date with
-            everything in the Django community:
-          </p>
+        <div class="container-float">
+            <div class="main-content">
+                <h2 class="main-title">Stay in the loop</h2>
+                <p class="main-desc">
+                    Subscribe to one of our mailling lists to stay up to date with everything in the Django community:
+                </p>
 
-          <div class="mailing-first">
-            <h3 class="mailing-title">
-              <a href="#">Using Django</a>
-            </h3>
-            <p class="mailing-desc">
-              Get help with Django and follow announcements.
-            </p>
-            <form action="#" class="mailing-form">
-              <label for="input-following"></label>
-              <input
-                type="email"
-                placeholder="Enter email"
-                id="input-following"
-                name="input-following"
-              />
-              <button type="submit" class="mailing-form-btn">Submit</button>
-            </form>
-            <p class="mailing-desc">
-              You can also subscribe by sending an email to
-              <a href="#">django-users+subscribe@googlegroups.com</a> and
-              following the instructions that will be sent to you.
-            </p>
-          </div>
+                <div class="mailing-first">
+                    <h3 class="mailing-title">
+                        <a href="#">Using Django</a>
+                    </h3>
+                    <p class="mailing-desc">
+                        Get help with Django and follow announcements.
+                    </p>
+                    <form action="#" class="mailing-form">
+                        <label for="input-following"></label>
+                        <input type="email" placeholder="Enter email" id="input-following" name="input-following" />
+                        <button type="submit" class="mailing-form-btn">Submit</button>
+                    </form>
+                    <p class="mailing-desc">
+                        You can also subscribe by sending an email to
+                        <a href="#">django-users+subscribe@googlegroups.com</a> and following the instructions that will be sent to you.
+                    </p>
+                </div>
 
-          <div class="mailing">
-            <h3 class="mailing-title">
-              <a href="#">Contributing to Django</a>
-            </h3>
-            <p class="mailing-desc">
-              Contribute to the development of Django itself.
-            </p>
-            <form action="#" class="mailing-form">
-              <label for="input-contribute"></label>
-              <input
-                type="email"
-                placeholder="Enter email"
-                id="input-contribute"
-                name="input-contribute"
-              />
-              <button type="submit" class="mailing-form-btn">Submit</button>
-            </form>
-            <p class="mailing-desc">
-              Before asking a question about how to contribute, read
-              <a href="#">Contributing to Django</a>. Many frequently asked
-              questions are answered there.
-            </p>
-          </div>
+                <div class="mailing">
+                    <h3 class="mailing-title">
+                        <a href="#">Contributing to Django</a>
+                    </h3>
+                    <p class="mailing-desc">
+                        Contribute to the development of Django itself.
+                    </p>
+                    <form action="#" class="mailing-form">
+                        <label for="input-contribute"></label>
+                        <input type="email" placeholder="Enter email" id="input-contribute" name="input-contribute" />
+                        <button type="submit" class="mailing-form-btn">Submit</button>
+                    </form>
+                    <p class="mailing-desc">
+                        Before asking a question about how to contribute, read
+                        <a href="#">Contributing to Django</a>. Many frequently asked questions are answered there.
+                    </p>
+                </div>
+            </div>
+            <div class="side-content">사이드 콘텐츠</div>
         </div>
-        <div class="side-content">사이드 콘텐츠</div>
-      </div>
     </main>
     <footer class="content-info">
-      <div class="links">링크</div>
-      <div class="footer">푸터</div>
+        <div class="links">링크</div>
+        <div class="footer">푸터</div>
     </footer>
-  </body>
+</body>
+
 </html>
